# ActiveLearningIDPs

./: README.md  augment_features.py  calculate_normalization_stats.py  ga_iterk_mc_test.py  ga_iterk_selection_testing.py  ga_mc_test.sh  ga_run_ehvi_test.sh  generate_labels.py  generate_parents.py  pyproject.toml  select_best_sequence.py  seq_generation_test.sh  seq_mc_test.sh  sequence_featurizer.py  sequence_pipeline.py
TRAINING/: dnn_trainer.py  gpr_trainer.py  kfold_training.py  kfold_training_mc.py  rf_model.py
UTILS/: data_preprocessing_gpr.py  ehvi.py
al_pipeline/: __init__.py
al_pipeline/features/: __init__.py  augment_features.py  calculate_normalization_stats.py  data_preprocessing.py  sequence_featurizer.py
al_pipeline/labels/: __init__.py  generate_labels.py
al_pipeline/models/: DNN_Model.py  __init__.py  dnn_trainer.py  gpr_model.py  gpr_trainer.py  kfold_training.py  kfold_training_mc.py
al_pipeline/selection/: __init__.py  ehvi.py  ga_iterk_mc_test.py  ga_iterk_selection_testing.py  generate_candidate_seqs.py  generate_parents.py  geneticalgorithm_m2.py  select_best_sequence.py  utils.py
